[gd_scene load_steps=16 format=2]

[ext_resource path="res://source/mini_games/Prof_Hoax/Professor Hoax.png" type="Texture" id=1]
[ext_resource path="res://source/mini_games/Prof_Hoax/Hoax.gd" type="Script" id=2]
[ext_resource path="res://source/mini_games/Prof_Hoax/time.gd" type="Script" id=3]
[ext_resource path="res://source/mini_games/Prof_Hoax/Sc.gd" type="Script" id=4]
[ext_resource path="res://source/mini_games/Prof_Hoax/option3.gd" type="Script" id=5]
[ext_resource path="res://source/mini_games/Prof_Hoax/option4.gd" type="Script" id=6]
[ext_resource path="res://source/mini_games/Prof_Hoax/option1.gd" type="Script" id=7]
[ext_resource path="res://source/mini_games/Prof_Hoax/questionHoax.gd" type="Script" id=8]
[ext_resource path="res://source/mini_games/Prof_Hoax/option2.gd" type="Script" id=9]
[ext_resource path="res://source/mini_games/Prof_Hoax/Hoax.tres" type="DynamicFont" id=10]
[ext_resource path="res://source/mini_games/Prof_Hoax/button_pressed_styleboxtexture.tres" type="StyleBox" id=11]
[ext_resource path="res://source/mini_games/Prof_Hoax/button_hover_styleboxtexture.tres" type="StyleBox" id=12]
[ext_resource path="res://source/mini_games/Prof_Hoax/button_normal_styleboxtexture.tres" type="StyleBox" id=13]
[ext_resource path="res://source/mini_games/Prof_Hoax/BASE_white.png" type="Texture" id=14]
[ext_resource path="res://source/mini_games/Prof_Hoax/desktop_new.png" type="Texture" id=15]

[node name="Hoax" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 39.0575
margin_top = 20.1587
margin_right = 4839.06
margin_bottom = 3620.16
rect_scale = Vector2( 0.194417, 0.194417 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Label" parent="."]
margin_left = 114.189
margin_top = 123.081
margin_right = 624.189
margin_bottom = 467.081
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "INSTRUCTIONS:

PRESS START TO PLAY

A Famous Scientist needs your help cross-checking
various mathematical values. Help him!

Answer the following questions before the timer
concludes."
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option1" type="Button" parent="."]
margin_left = 636.0
margin_top = 153.0
margin_right = 885.0
margin_bottom = 207.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option2" type="Button" parent="."]
margin_left = 636.0
margin_top = 229.0
margin_right = 885.0
margin_bottom = 283.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option3" type="Button" parent="."]
margin_left = 636.0
margin_top = 305.0
margin_right = 885.0
margin_bottom = 359.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option4" type="Button" parent="."]
margin_left = 636.0
margin_top = 380.0
margin_right = 885.0
margin_bottom = 435.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 410.028
margin_top = 502.111
margin_right = 615.028
margin_bottom = 547.111
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 13 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 277.0
margin_top = 621.087
margin_right = 400.0
margin_bottom = 667.087
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
margin_left = 114.189
margin_top = 621.087
margin_right = 237.189
margin_bottom = 667.087
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00:00"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="option1" to="." method="_on_option1_pressed"]
[connection signal="pressed" from="option2" to="." method="_on_option2_pressed"]
[connection signal="pressed" from="option3" to="." method="_on_option3_pressed"]
[connection signal="pressed" from="option4" to="." method="_on_option4_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
